# chess

./: .gitignore  .gitmodules
interface/: README.md  index.html  replay-controller.js  send-command.js  styles.css
ros2_video_publisher/: README.md  package.xml  requirements-yolo.txt  setup.cfg  setup.py
ros2_video_publisher/chess_video_publisher/: red_yolo_bridge.py  video_stream_publisher.py
ros2_video_publisher/config/: red_yolo_commands.example.json
ros2_video_publisher/launch/: red_yolo_bridge.launch.py  video_stream_publisher.launch.py
ui/: README.md  index.html  main.js  package.json  server.js  styles.css
